--- a/public/index.html
+++ b/public/index.html
@@ -6,20 +6,13 @@
   <script src="https://code.jquery.com/jquery-3.4.1.js"
           integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
           crossorigin="anonymous"></script>
-  <script defer src="/__/firebase/7.1.0/firebase-app.js"></script>
-  <script defer src="/__/firebase/7.1.0/firebase-database.js"></script>
-  <script defer src="/__/firebase/7.1.0/firebase-auth.js"></script>
-  <script defer src="/__/firebase/init.js"></script>
+
+
   <script src="index.js"></script>
 
 </head>
 <body>
-<div id="HeadLine">
-  <header>
-    SecRedWeb
-  </header>
-  <div id="LoginCon">
-  </div>
+<div id="header">
 
 </div>
 <div id="contentContainer">
