--- a/public/channel.html
+++ b/public/channel.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="utf-8">
     <title>SecRedWeb</title>
-    <script src="https://code.jquery.com/jquery-3.4.1.js"
-            integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-            crossorigin="anonymous"></script>
+    <script src="/__/firebase/7.4.0/firebase-app.js"></script>
+    <script src="/__/firebase/7.4.0/firebase-database.js"></script>
+    <script src="/__/firebase/7.4.0/firebase-auth.js"></script>
+    <script src="/__/firebase/init.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="channel.js"></script>
     <link rel="stylesheet" type="text/css" href="channel.css">
 </head>
@@ -19,6 +21,8 @@
 
 </div>
 <div id="contentContainer">
+</div>
+<div id="createCommentContainer">
 </div>
 </body>
 </html>
