--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>SecRedWeb</title>
-  <script src="https://code.jquery.com/jquery-3.4.1.js"
-          integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-          crossorigin="anonymous"></script>
-  <script defer src="/__/firebase/7.1.0/firebase-app.js"></script>
-  <script defer src="/__/firebase/7.1.0/firebase-database.js"></script>
-  <script defer src="/__/firebase/7.1.0/firebase-auth.js"></script>
-  <script defer src="/__/firebase/init.js"></script>
+
+  <script src="/__/firebase/7.4.0/firebase-app.js"></script>
+  <script src="/__/firebase/7.4.0/firebase-database.js"></script>
+  <script src="/__/firebase/7.4.0/firebase-auth.js"></script>
+  <script src="/__/firebase/init.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
   <script src="index.js"></script>
 
@@ -19,5 +18,9 @@
 </div>
 <div id="contentContainer">
 </div>
+</div>
+<div id="createChannelContainer">
+</div>
+
 </body>
 </html>
