--- a/public/channel.html
+++ b/public/channel.html
@@ -13,16 +13,21 @@
 </head>
 <body>
 <div id="HeadLine">
-    <header>
-        Channel
-    </header>
+    <p id="homeButton">
+        SecRedWeb
+    </p>
     <div id="LoginCon">
     </div>
 
 </div>
-<div id="contentContainer">
+<div id="contentContainer" class="conDiv">
+    <div id="subCon">
+        <div id="parentChannel"></div>
+        <div id="commentCon"></div>
+    </div>
+    <div id="createCommentContainer">
+    </div>
 </div>
-<div id="createCommentContainer">
-</div>
+
 </body>
 </html>
