--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>SecRedWeb</title>
+    <meta charset="utf-8">
+    <title>SecRedWeb</title>
 
-  <script src="/__/firebase/7.4.0/firebase-app.js"></script>
-  <script src="/__/firebase/7.4.0/firebase-database.js"></script>
-  <script src="/__/firebase/7.4.0/firebase-auth.js"></script>
-  <script src="/__/firebase/init.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="/__/firebase/7.4.0/firebase-app.js"></script>
+    <script src="/__/firebase/7.4.0/firebase-database.js"></script>
+    <script src="/__/firebase/7.4.0/firebase-auth.js"></script>
+    <script src="/__/firebase/init.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="index.css">
 
-  <script src="index.js"></script>
+    <script src="index.js"></script>
 
 </head>
 <body>
+<p id="homeButton">
+    SecRedWeb
+</p>
 <div id="LoginCon">
 </div>
 <div id="contentContainer">
